--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         height: 100%;
       }
     </style>
-    <title>React App</title>
+    <title>天空之城 for zzp</title>
   </head>
   <body>
     <noscript>
